# python_estudos

aula 02/: desafio.py  exercicios.py  main.py
aula 03/: desafio.py  exercicios.py
aula 06/: .flake8  .pre-commit-config.yaml  main.py  main_2.py  pyproject.toml
aula 07/: etl.py  exemplo_00.py  exercicios.py  main.py  projeto.py
aula 08/: etl.py  pipeline.py  pyproject.toml  test_etl.py
aula 09/: etl.py  exemplo_00.py  exemplo_sentry.py  logging_exemplo_erros.py  pyproject.toml  timer_decorator.py  utils_log.py
aula 10/: csv-test.py  exemplo.csv  pyproject.toml
