[tool.poetry]
name = "aula 08"
version = "0.1.0"
description = ""
authors = ["Isabela.leite <isabela.leeite@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.19.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
